# mandriva-galaxy

./: CMakeLists.txt  main.cpp  mandriva-galaxy.desktop  mandriva-galaxy.spec  mandrivagalaxy.cpp  mandrivagalaxy.h  mandrivagalaxy.ui
po/: CMakeLists.txt  Messages.sh  ast.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  hu.po  it.po  mandriva-galaxy.pot  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  uz.po  uz@cyrillic.po  zh_CN.po  zh_TW.po
